manual testing done, unit testing to be done

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+# turn off the banner
+spring.main.banner-mode=off
+
 # connecting the database
 spring.datasource.url=jdbc:postgresql://localhost:5432/ProductDB
 spring.datasource.username=postgres
@@ -6,6 +9,5 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-
-
+#error messages (such as the message associated with an exception) will be included in the response sent to the client when an error occurs
 server.error.include-message=always
